--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.8'
 services:
   internetbanking:
-    image: trainerreyaz/ib-image:latest
+    image: lakshmi0802/ib-img:latest
     ports:
       - "81:80"
     deploy:
@@ -9,7 +9,7 @@ services:
     volumes:
       - /var/lib/internetbanking
   mobilebanking:
-    image: trainerreyaz/mb-image:latest
+    image: lakshmi0802/mb-img:latest
     ports:
       - "82:80"
     deploy:
@@ -17,7 +17,7 @@ services:
     volumes:
       - /var/lib/mobilebanking
   insurance:
-    image: trainerreyaz/insurance-image:latest
+    image: lakshmi0802/insurance-img:latest
     ports:
       - "83:80"
     deploy:
@@ -25,7 +25,7 @@ services:
     volumes:
       - /var/lib/insurance
   loan:
-    image: trainerreyaz/loans-image:latest
+    image: lakshmi0802/loan-img:latest
     ports:
       - "84:80"
     deploy:
